[gd_scene load_steps=9 format=3 uid="uid://b4p7v0wggi88m"]

[ext_resource type="Texture2D" uid="uid://c146vp6agufm7" path="res://art/oubliette_weapons - free/spr_wep_brnz_spear_0.png" id="1_po4ps"]
[ext_resource type="Script" path="res://weapons/spear.gd" id="1_wqkbv"]
[ext_resource type="Script" path="res://weapons/DeleteTimer.gd" id="3_ywkg3"]
[ext_resource type="AudioStream" uid="uid://bpi7gy5q2ud75" path="res://sfx/Hit and Punch Preview/AUDIO/PUNCH_DESIGNED_HEAVY_23.wav" id="4_elbrs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cjowh"]
radius = 3.0
height = 32.0

[sub_resource type="Animation" id="Animation_o1jk5"]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dulet"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5qqfh"]
_data = {
"Attack": SubResource("Animation_o1jk5"),
"RESET": SubResource("Animation_dulet")
}

[node name="Spear" type="Area2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_wqkbv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -17)
shape = SubResource("CapsuleShape2D_cjowh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, -16)
rotation = -1.5708
scale = Vector2(0.814659, 0.814658)
texture = ExtResource("1_po4ps")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5qqfh")
}

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true
script = ExtResource("3_ywkg3")

[node name="StopMoveTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_elbrs")
volume_db = -15.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="StopMoveTimer" to="." method="_on_stop_move_timer_timeout"]
